03_app/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myapp
  name: myapp
  namespace: myproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      namespace: myproject
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: littlelucidlynx/static-nginx-app:init
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: myproject
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    name: http-myapp
    targetPort: 80
